tdf#65344: Don’t put Kashida before any final char

If we didn’t find any known good position, not inserting Kashida at all
is better than inserting it randomly.

Change-Id: I075f8414b7f0a0aeb4d27d372c7eae51f4b5c37b